# respace

./: .env  README.md  pyproject.toml  requirements.txt
input_test/: test_custom_floorplan.py  test_retrieval.py  unit_1_room_1_livingroom.json
input_test/13feb_settings/: unit_1_room_3_bedroom.json  unit_1_room_4_bedroom.json
input_test/13feb_settings/unit_1_room_1_livingroom/: generated_scene.json
input_test/13feb_settings/unit_1_room_2_bedroom/: generated_scene.json
input_test/13feb_settings/unit_1_room_3_bedroom/: generated_scene.json
input_test/13feb_settings/unit_1_room_4_bedroom/: generated_scene.json
input_test/13feb_settings_retrieval/: retrieval_results_unit_1_room_1_livingroom.json  retrieval_results_unit_1_room_2_bedroom.json  retrieval_results_unit_1_room_3_bedroom.json  retrieval_results_unit_1_room_4_bedroom.json
input_test/3og_example/output_bedroom_1/: generated_scene.json
input_test/3og_example/output_bedroom_3/: generated_scene.json
input_test/3og_example/output_livingroom/: generated_scene.json
input_test/debugging_pms/: unit_1_room_1_livingroom.json
input_test/debugging_pms/unit_1_room_1_livingroom/: generated_scene.json
input_test/debugging_pms_retrieval/: output_sampler.txt  retrieval_results_unit_1_room_1_livingroom.json
input_test/default_settings/3og_example_retrieval/: retrieval_results_output_bedroom_1.json  retrieval_results_output_bedroom_3.json  retrieval_results_output_livingroom_run2.json
input_test/output_retrieval/: retrieval_results_output_bedroom_2.json  retrieval_results_output_livingroom.json
input_test/unit_1_example_retrieval/: retrieval_results_output_bedroom_3.json
src/: eval.py  pipeline.py  sample.py  test.py  utils.py  viz.py
(+12 files in other folders)
